--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -127,9 +127,26 @@
     <section id="contact">
         <h1>Contact us</h1>
         <div class="contact-content">
-            <div class="address"></div>
-            <div class="numbers"></div>
-            <div class="socialmedia"></div>
+            <div class="address">
+                <h3>
+                    Hospital Address:
+                </h3><br>
+                <p>
+                    5, Government Arts College Rd, Opposite Court, Gopalapuram, Coimbatore, Tamil Nadu 641018
+                </p><br>
+                <p>
+                    <span><i class="fa-solid fa-phone"></i> 0422 40 42 121 / 0422-2219191</span>
+                </p><br>
+                <p>
+                    <span><i class="fa-solid fa-envelope"></i>INFO@KGHOSPITAL.COM</span>
+                </p>
+            </div>
+            <div class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15666.044155847774!2d76.9715735!3d11.0002319!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba859a5b5400001%3A0x90b60ab4fbdd5cb4!2sKG%20Hospital!5e0!3m2!1sen!2sin!4v1710240422828!5m2!1sen!2sin"
+                    width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
     </section>
     <!-- contact page end-->
