--- a/myproject/templates/login.html
+++ b/myproject/templates/login.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
-
+{%load static%}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +13,6 @@
 </head>
 
 <body>
-    
     <div class="main">
         <header class="fade-up">
             <img src="{% static 'image/project_logo-removebg-preview.png' %}" alt="logo">
@@ -24,59 +22,83 @@
         </header>
         <div class="container fade-up">
             <div class="signin-signup">
-                <form action="" method="post" class="sign-in-form">
-                    {% csrf_token %}
+                <form action="" class="sign-in-form">
                     <h2 class="title">Sign in</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Username" name="username">
+                        <input type="text" id="userName" placeholder="Username">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password" name="password">
+                        <input type="password" id="password" placeholder="Password">
                     </div>
                     <input type="submit" value="Login" class="btn">
                     <p class="social-text">Or Sign in with social platform</p>
                     <div class="social-media">
-                        <!-- Add your social media links here -->
+                        <a href="https://www.facebook.com/login/" class="social-icon">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="https://twitter.com/i/flow/login" class="social-icon">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-google"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/home" class="social-icon">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
                     </div>
                     <p class="account-text">Don't have an account? <a href="#" id="sign-up-btn2">Sign up</a></p>
                 </form>
-                <form action="" method="post" class="sign-up-form">
-                    {% csrf_token %}
+                <form action="" class="sign-up-form">
                     <h2 class="title">Sign up</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Username" name="username">
+                        <input type="text" placeholder="Username">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-envelope"></i>
-                        <input type="text" placeholder="Email" name="email">
+                        <input type="text" placeholder="Email">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password" name="password">
+                        <input type="password" placeholder="Password">
                     </div>
                     <input type="submit" value="Sign up" class="btn">
                     <p class="social-text">Or Sign in with social platform</p>
                     <div class="social-media">
-                        <!-- Add your social media links here -->
+                        <a href="https://www.facebook.com/login/" class="social-icon">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="https://twitter.com/i/flow/login" class="social-icon">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-google"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/home" class="social-icon">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
                     </div>
+                    
                     <p class="account-text">Already have an account? <a href="#" id="sign-in-btn2">Sign in</a></p>
                 </form>
             </div>
             <div class="panels-container">
                 <div class="panel left-panel">
                     <div class="content">
-                        <h2>If you already have an account</h2>
+                        <h1>
+                            Welcome back to KGH-Bites..!
+                        </h1>
+                        <h5>If you already have an account</h5>
                         <button class="btn" id="sign-in-btn">Log in</button>
                     </div>
 
                 </div>
                 <div class="panel right-panel">
                     <div class="content">
-
-                        <h2>If you don't have an account just sign in</h2>
+                        <h1>Welcome to KGH-Bites...!</h1>
+                        <h5>If you don't have an account just sign in</h5>
                         <button class="btn" id="sign-up-btn">Sign up</button>
                     </div>
 
