--- a/myproject/staticfiles/misc-canteenstyle.css
+++ b/myproject/staticfiles/misc-canteenstyle.css
@@ -6,6 +6,8 @@
     font-family:"poppins",sans-serif;
 }
 html{
+    max-width:100vw;
+    overflow:hidden;
     scroll-behavior: smooth;
 }
 header{
@@ -88,6 +90,7 @@ header a{
     display:flex;
     width:20%; 
     justify-content:space-around;
+    cursor:pointer;
 }
 .back:hover, .search-font:hover{
     background-color: #2e2c94;
@@ -118,36 +121,34 @@ section{
     border:1px solid blue;
     border-radius:25px;
     position:relative;
-    z-index: 90;
+    z-index: 10;
     overflow:hidden;
-    transition:all 0.5s;
 }
 .content img{
     width:100%;
     position:absolute;
     top:0;  
     right:0;
-    z-index:9;
+    z-index:8;
 } 
 .content .text{
-    z-index: 10;
-    color:#ffffff;
+    z-index: 20;
+    color:white;
     position:absolute;
     bottom:10px;
     left:15px;
     width:90%;
     display:flex;
     justify-content: space-between;
-    transition:0.5s;
 }
 .content .text .btn{
-    background:transparent;
-    border:2px solid #3633AD;
-    color:#3633AD;
+    color:#2e2c94;
+    border:2px solid #2e2c94;
+    background-color: transparent;
+    height:50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding:5px;
     border-radius:15px;
     cursor:pointer;
 }
@@ -158,3 +159,87 @@ section{
     background-color:#3633AD;
     color:white;
 } 
+.cart-box{
+    position:fixed;
+    top:0;
+    right:-100%;
+    height:100vh;
+    width:50vh;
+    background-color: white;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+.cart-active{
+    right:0;
+    transition: ease-in-out 0.5s;
+}
+.cart-title{
+    text-align:center;
+    font-size:2em;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+.cart-card{
+    display:grid;
+    grid-template-columns:32% 50% 18%;
+    align-items:center;
+    gap:1em;    
+    margin-top:1rem;
+    border-bottom:1px solid rgba(0,0,0,0.5);
+    padding-bottom:10px;
+}
+.cart-img{
+    height:75px;
+    width:75px;
+    object-fit:cover;
+    padding:5px;
+    margin-left:10px;
+}
+.cross{
+    position:absolute;
+    top:0px;
+    right:10px;
+    font-size:1.2em;
+}
+.cart-details{
+    display:grid;
+    row-gap:0.5rem;
+}
+.price-box{
+    display:flex;
+    justify-content:space-between;
+}
+.cart-food-title{
+    font-size:1rem;
+    text-transform:uppercase;
+    font-weight:600;
+    color:#3633AD;
+}
+#cart-quantity{
+    width:30px;
+    align-items: center ;
+}
+.item-remove{
+    cursor:pointer;
+    color:red;
+}
+.total{
+displaY:flex;
+justify-content:end;
+margin-top:20px;
+}
+.total-title{
+    padding-right:5px;
+    font-weight:600;
+}
+.total-price{
+   margin-right:20px; 
+}
+.buy-btn{
+    align-items: center;
+    padding:12px 2px;
+    border:none;
+    background-color: #3633AD;
+    color:white;
+    border-radius:5px;
+}
