back fixed maincanteen

--- a/myproject/templates/maincanteen.html
+++ b/myproject/templates/maincanteen.html
@@ -25,7 +25,7 @@
             <div class="cart">Cart
                 <i class="fa-solid fa-cart-shopping"></i>
             </div>
-            <a href="{% static 'index.html' %}">
+            <a href="{% url 'index' %}">
                 <div class="back">Back</div>
             </a>
         </div>
