--- a/myproject/templates/login.html
+++ b/myproject/templates/login.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | KGH-Bites</title>
-    <link rel="icon" href="{%static 'image/kglogo.jpg'%}">
-    <link rel="stylesheet" href="{%static'loginstyle.css'%}">
+    <link rel="icon" href="{% static 'image/kglogo.jpg' %}">
+    <link rel="stylesheet" href="{% static 'loginstyle.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,9 +17,9 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="{%static 'image/team-project_image-removebg-preview.png'%}" alt="logo">
+            <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
         </div>
-        <a href="index.html">
+        <a href="{% url 'index' %}">
             <div class="back">Back</div>
         </a>
     </header>
@@ -60,7 +60,7 @@
                 <div class="text-content">
                    <span><h1>Welcome back, to KGH-Bites....!</h1>
                     <p>If you don't have an account just </p></span> 
-                    <a href="signup.html"><button class="sign-up">Sign up</button></a>
+                    <a href="{% url 'signup' %}"><button class="sign-up">Sign up</button></a>
                 </div>
             </div>
         </div>
