--- a/myproject/templates/signup.html
+++ b/myproject/templates/signup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{%load static%}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup | KGH-Bites</title>
-    <link rel="icon" href="image/kglogo.jpg">
-    <link rel="stylesheet" href="signupstyle.css">
+    <link rel="icon" href="{% static 'image/kglogo.jpg' %}">
+    <link rel="stylesheet" href="{% static 'signupstyle.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,9 +16,9 @@
 <body>  
     <header>
         <div class="logo-container">
-            <img src="image/team-project_image-removebg-preview.png" alt="logo">
+            <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
         </div>
-        <a href="index.html">
+        <a href="{% url 'index' %}">
             <div class="back">Back</div>
         </a>    
     </header>
@@ -63,7 +63,7 @@
                 <div class="text-content">
                    <span><h1>Welcome to KGH-Bites....!</h1>
                     <p>If you don't have an account just </p></span> 
-                    <a href="login.html"><button class="sign-up">Login</button></a>
+                    <a href="{% url 'login' %}"><button class="sign-up">Login</button></a>
                 </div>
             </div>
         </div>
