--- a/myproject/staticfiles/loginstyle.css
+++ b/myproject/staticfiles/loginstyle.css
@@ -1,250 +1,133 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background: #ffffff;
-}
-.main{
-    display: block;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
+    padding:0;
+    margin:0;
+    box-sizing:border-box;
+    font-family: "poppins",sans-serif;
+    text-decoration:none;
 }
 header{
+    width:100vw;
     display:flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content:space-around;
 }
-header img{
+header .logo-container img{
     width:400px;
     height:115px;
-    object-fit:cover;
+    object-fit: cover;
+    margin-top:20px;
 }
-header .go-back-btn{
-    height:40px;
-    padding:5px 20px;
-    margin-top:30px;
-    background-color: #3633AD;
-    border-radius:10px;
+header a{
     color:white;
+    font-weight:500;
+}
+.back{
+    border:1px solid #3633AD;
+    padding:5px 10px; 
+    border-radius:15px;
+    background-color: #3633AD;
+}
+section{
+    width:100vw;
+    height:80vh;
     display:flex;
     justify-content:center;
     align-items:center;
 }
-.container {
-    position: relative;
-    width: 70vw;
-    height: 80vh;
-    background: #fff;
-    border-radius: 15px;
-    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+.container{
+    height:80%;
+    width:70%;
+    border-radius:25px;
     overflow: hidden;
-}
-.container.fade-up{
-    animation-delay:0.8s;
-}
-.container::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -50%;
-    width: 100%;
-    height: 100%;
-    background-color: #3633AD;
-    z-index: 6;
-    transform: translateX(100%);
-    transition: 1s ease-in-out;
-}
-.signin-signup {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
+    display:flex;
     align-items: center;
-    justify-content: space-around;
-    z-index: 5;
+    justify-content: space-between;
+    box-shadow:5px 5px 15px rgba(105,105,105,0.5),
+                -5px -5px 15px rgba(105,105,105,0.5);
 }
-form {
+form{
+    height:100%;
+    width:50%;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 40%;
-    min-width: 238px;
-    padding: 0 10px;
+    flex-direction:column;
+    align-items:center;   
+    padding-left:50px;
 }
-form.sign-in-form {
-    opacity: 1;
-    transition: 0.5s ease-in-out;
-    transition-delay: 1s;
+.heading{
+    font-size:1.5em;
+    margin-top:50px;
+    letter-spacing:2px;
 }
-form.sign-up-form {
-    opacity: 0;
-    transition: 0.5s ease-in-out;
-    transition-delay: 1s;
+.input-box{
+    margin-top:40px;
+    border:2px solid rgba(105,105,105,0.5);
+    width:80%;
+    height:40px;
+    border-radius:20px;
+    overflow:hidden;
 }
-.title {
-    font-size: 35px;
-    margin-bottom: 10px;
+.input-box i{
+    margin-left:10px;
 }
-.input-field {
-    width: 100%;
-    height: 50px;
-    background: #f0f0f0;
-    margin: 10px 0;
-    border: 2px solid #696969;
-    border-radius: 50px;
-    display: flex;
-    align-items: center;
+.input-box input{
+    height:100%;
+    width:90%;
+    border:none;
+    outline:none;
 }
-.input-field i {
-    flex: 1;
-    text-align: center;
-    color: #666;
-    font-size: 18px;
+.text{
+    margin-top:40px;
 }
-.input-field input {
-    flex: 5;
-    background: none;
-    border: none;
-    outline: none;
-    width: 100%;
-    font-size: 18px;
-    font-weight: 600;
-    color: #444;
-}
-.btn {
-    width: 150px;
-    height: 50px;
-    border: none;
-    border-radius: 50px;
-    background: #e85441;
-    color: #fff;
-    font-weight: 600;
-    margin: 10px 0;
-    text-transform: uppercase;
-    cursor: pointer;
-}
-.btn:hover {
-    background: #c3200a;
-}
-.social-text {
-    margin: 10px 0;
-    font-size: 16px;
-}
-.social-media {
-    display: flex;
-    justify-content: center;
-}
-.social-icon {
-    height: 45px;
-    width: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #3633AD;
-    border: 1px solid #3633AD;
-    border-radius: 50px;
-    margin: 0 5px;
-}
-a {
-    text-decoration: none;
-}
-.social-icon:hover {
-    color: white;
-    border-color: white;
-    background-color: #3633AD;
-}
-.panels-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-.panel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    width: 35%;
-    min-width: 238px;
-    padding: 0 10px;
-    text-align: center;
-    z-index: 6;
-}
-.left-panel {
-    pointer-events: none;
-}
-.content {
-    color: #fff;
-    transition: 1.1s ease-in-out;
-    transition-delay: 0.5s;
-}
-.panel h3 {
-    font-size: 24px;
-    font-weight: 600;
-}
-.panel p {
-    font-size: 15px;
-    padding: 10px 0;
-}
-.image {
-    width: 100%;
-    transition: 1.1s ease-in-out;
-    transition-delay: 0.4s;
-}
-
-.left-panel .content {
-    transform: translateX(-200%);
-}
-.content h5{
+.social-media{
     margin-top:10px;
+    width:80%;  
+    display: flex;
+    justify-content:space-around;
+
 }
-.right-panel .content {
-    transform: translateX(0);
+.social-media .social-icon{
+    width:45px;
+    height:45px;
+    color:black;
+    padding:5px;
+    border-radius:50%;
+    font-size: 1.8rem;  
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    border:2px solid black;
+    margin-top:20px;
 }
-.account-text {
-    display: none;
+.social-media .social-icon:hover{
+    border:2px solid #3633AD;
+    color:#3633AD;
 }
-.container.sign-up-mode::before {
-    transform: translateX(0);
+.signup{
+    height:100%;
+    padding:20px;
+    width:50%;
+    background-color: #3633AD;
+    color: white;
+    display:flex;
+    justify-content: center;
+    align-items:center;
 }
-.container.sign-up-mode .right-panel .content {
-    transform: translateX(200%);
+.text-content{
+    height:60%;
+    display:flex;
+    align-items: center;
+    flex-direction:column;
+    justify-content:space-around
 }
-.container.sign-up-mode .left-panel .content {
-    transform: translateX(0);
+.text-content span p{
+    padding-left:50px;
 }
-.container.sign-up-mode form.sign-in-form {
-    opacity: 0;
-}
-.container.sign-up-mode form.sign-up-form {
-    opacity: 1;
-}
-.container.sign-up-mode .right-panel {
-    pointer-events: none;
-}
-.container.sign-up-mode .left-panel {
-    pointer-events: all;
-}
-.fade-up{
-    opacity: 0;
-    transform:translateY(30px);
-    animation:fade-up 0.3s linear forwards;
-}
-@keyframes fade-up{
-    100%{
-        opacity:1;
-        transform:translateY(0);
-    }
+.sign-up{
+    width:100px;
+    height:50px;
+    border:none;
+    outline:none;
+    border-radius:20px;
+    background-color: #D7402C;
 }
