--- a/myproject/static/loginstyle.css
+++ b/myproject/static/loginstyle.css
@@ -77,10 +77,9 @@ form{
     outline:none;
 }
 .text{
-    margin-top:40px;
+    margin-top:20px;
 }
 .social-media{
-    margin-top:10px;
     width:80%;  
     display: flex;
     justify-content:space-around;
@@ -97,7 +96,7 @@ form{
     justify-content: center;
     align-items:center;
     border:2px solid black;
-    margin-top:20px;
+    margin-top:10px;
 }
 .social-media .social-icon:hover{
     border:2px solid #3633AD;
@@ -130,4 +129,14 @@ form{
     outline:none;
     border-radius:20px;
     background-color: #D7402C;
+}
+
+.login-btn{
+    width:100px;
+    height:40px;
+    border:none;
+    border-radius:15px;
+    background-color: #3633AD;
+    color:white;
+    margin-top:20px;
 }
