updated files part 2

--- a/myproject/templates/conformation.html
+++ b/myproject/templates/conformation.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conformation | KHG-Bites</title>
-    <link rel="icon" href="image/kglogo.jpg">
-    <link rel="stylesheet" href="conformationstyle.css">
+    <link rel="icon" href="{% start 'image/kglogo.jpg' %}">
+    <link rel="stylesheet" href="{% static'conformationstyle.css' %}">
 </head>
 <body>
     <div class="box">
