--- a/myproject/staticfiles/misc-canteenstyle.css
+++ b/myproject/staticfiles/misc-canteenstyle.css
@@ -6,8 +6,7 @@
     font-family:"poppins",sans-serif;
 }
 html{
-    max-width:100vw;
-    overflow:hidden;
+    overflow-x: hidden;
     scroll-behavior: smooth;
 }
 header{
@@ -112,6 +111,7 @@ section{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-columns: auto;
+    gap:15px;
 }
 .content{
     width:300px;
@@ -143,21 +143,23 @@ section{
 }
 .content .text .btn{
     color:#2e2c94;
-    border:2px solid #2e2c94;
-    background-color: transparent;
+    background-color: #3633AD;
     height:50px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius:15px;
+    padding:8px;
+    font-size:15px;
     cursor:pointer;
+    color:white;
 }
 .content:hover{
     transform:scale(1.08);
 }
 .content .btn:hover{
-    background-color:#3633AD;
-    color:white;
+    background-color:#ffffff;
+    color:#3633AD;
 } 
 .cart-box{
     position:fixed;
@@ -180,20 +182,13 @@ section{
     letter-spacing: 1px;
 }
 .cart-card{
-    display:grid;
-    grid-template-columns:32% 50% 18%;
+    display:flex;
+    flex-direction: column;
     align-items:center;
     gap:1em;    
     margin-top:1rem;
     border-bottom:1px solid rgba(0,0,0,0.5);
     padding-bottom:10px;
-}
-.cart-img{
-    height:75px;
-    width:75px;
-    object-fit:cover;
-    padding:5px;
-    margin-left:10px;
 }
 .cross{
     position:absolute;
@@ -202,8 +197,10 @@ section{
     font-size:1.2em;
 }
 .cart-details{
-    display:grid;
-    row-gap:0.5rem;
+    display:flex;
+    justify-content: space-between;
+    padding-left:20px;
+    width:300px;
 }
 .price-box{
     display:flex;
@@ -220,13 +217,14 @@ section{
     align-items: center ;
 }
 .item-remove{
+    width:50px;
     cursor:pointer;
     color:red;
 }
 .total{
-displaY:flex;
-justify-content:end;
-margin-top:20px;
+    display:flex;
+    justify-content:end;
+    margin-top:20px;
 }
 .total-title{
     padding-right:5px;
@@ -236,10 +234,21 @@ margin-top:20px;
    margin-right:20px; 
 }
 .buy-btn{
+    position:absolute;
+    bottom:5px;
+    right:0;
+    width:200px;
+    margin-right:60px;
     align-items: center;
     padding:12px 2px;
     border:none;
     background-color: #3633AD;
     color:white;
     border-radius:5px;
+}
+.cart-value{
+    position:relative;
+    bottom:40px;
+    left:60px;
+    display:none;
 }
