--- a/myproject/templates/checkout.html
+++ b/myproject/templates/checkout.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{%load static%}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout | KGH-bites</title>
-    <link rel="icon" href="image/kglogo.jpg">
-    <link rel="stylesheet" href="checkoutstyle.css">
+    <link rel="icon" href="{% static 'image/kglogo.jpg' %}">
+    <link rel="stylesheet" href="{% static 'checkoutstyle.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,7 +14,7 @@
 
     <header>
         <div class="img-container">
-            <img src="image/team-project_image-removebg-preview.png" alt="logo">
+            <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
         </div>
     </header>
     <section>
