--- a/myproject/templates/maincanteen.html
+++ b/myproject/templates/maincanteen.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{%load static%}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main canteen</title>
-    <link rel="icon" href="image/kglogo.jpg">
-    <link rel="stylesheet" href="misc-canteenstyle.css">
+    <link rel="icon" href="{% static 'image/kglogo.jpg' %}">
+    <link rel="stylesheet" href="{% static 'misc-canteenstyle.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,7 +16,7 @@
     <!-- navigation bar -->
     <header class="fade-up">
         <div class="logo">
-            <img src="image/team-project_image-removebg-preview.png" alt="logo">
+            <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
         </div>
         <div class="search-box">
             <input type="text" placeholder="Search">
@@ -71,7 +71,7 @@
             </div>
 
 
-            <a href="checkout.html">
+            <a href="{% url 'checkout' %}">
                 <button class="buy-btn">Place now</button>
             </a>
         </div>
@@ -80,7 +80,7 @@
     <section>
         <div class="container">
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -91,7 +91,7 @@
             </div>
             <div class="content">
 
-                <img src="image/idlie.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/idlie.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Idle</h1>
@@ -102,7 +102,7 @@
 
             </div>
             <div class="content">
-                <img src="image/OnionUttapam.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/OnionUttapam.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Onion Uttappam</h1>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/pongal.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/pongal.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Pongal</h1>
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/veg bri.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/veg bri.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Veg Biriyani</h1>
@@ -264,7 +264,7 @@
 
         </div>
     </section>
-    <script src="miscscript.js"></script>
+    <script src="{% static 'miscscript.js' %}"></script>
 </body>
 
 </html>
