--- a/myproject/templates/maincanteen.html
+++ b/myproject/templates/maincanteen.html
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -182,7 +182,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-image">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-image">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -192,7 +192,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -202,7 +202,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -232,7 +232,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -242,7 +242,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
@@ -252,7 +252,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="image/dosa.jpg" alt="dosa" class="food-img">
+                <img src="{% static 'image/dosa.jpg' %}" alt="dosa" class="food-img">
                 <div class="text">
                     <span>
                         <h1>Dosa</h1>
