Trying to add payment

--- a/myproject/templates/checkout.html
+++ b/myproject/templates/checkout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {%load static%}
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,69 +13,104 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-    <header>
-        <div class="img-container">
-            <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
-        </div>
-    </header>
-    <section>
-        <div class="container">
-            <div class="details">
+<header>
+    <div class="img-container">
+        <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
+    </div>
+</header>
+<section>
+    <div class="container">
+        <div class="details">
 
-                <div class="detail-value">
-                    <span><p class="serial-no">1.</p>
-                    <h1>Dosa</h1></span>
-                    <h4 class="quantity">
-                        1-qty
-                    </h4>
-                    <div class="price">Rs.20</div>
-                </div>
-
-                <div class="detail-value">
-                    <span><p class="serial-no">1.</p>
-                    <h1>Dosa</h1></span>
-                    <h4 class="quantity">
-                        1-qty
-                    </h4>
-                    <div class="price">Rs.20</div>
-                </div>
-
-                <div class="detail-value">
-                    <span><p class="serial-no">1.</p>
-                    <h1>Dosa</h1></span>
-                    <h4 class="quantity">
-                        1-qty
-                    </h4>
-                    <div class="price">Rs.20</div>
-                </div>
-
-                <div class="total">
-                    <div class="total-amt">Rs.00</div>
-                </div>
+            <div class="detail-value">
+                <span>
+                    <p class="serial-no">1.</p>
+                    <h1>Dosa</h1>
+                </span>
+                <h4 class="quantity">
+                    1-qty
+                </h4>
+                <div class="price">Rs.20</div>
             </div>
-            <div class="form">
-                <div class="title">
-                    <h1>Details</h1>
-                </div>
-                <form class="patient-details">
-                    <div class="input-field">
-                        <i class="fa-solid fa-user"></i>
-                        <input type="text" placeholder="Username">
-                    </div>
-                    <div class="input-field">
-                        <i class="fa-solid fa-phone"></i>
-                        <input type="text" placeholder="Phone number">
-                    </div>
-                    <div class="input-field">
-                        <i class="fa-solid fa-house"></i>
-                        <input type="text" placeholder="Patient room number">
-                    </div>
-                    <button class="btn">Pay now</button>
-                </form>
+
+            <div class="detail-value">
+                <span>
+                    <p class="serial-no">1.</p>
+                    <h1>Dosa</h1>
+                </span>
+                <h4 class="quantity">
+                    1-qty
+                </h4>
+                <div class="price">Rs.20</div>
+            </div>
+
+            <div class="detail-value">
+                <span>
+                    <p class="serial-no">1.</p>
+                    <h1>Dosa</h1>
+                </span>
+                <h4 class="quantity">
+                    1-qty
+                </h4>
+                <div class="price">Rs.20</div>
+            </div>
+
+            <div class="total">
+                <div class="total-amt">Rs.00</div>
             </div>
         </div>
-    </section>
-
+        <div class="form">
+            <div class="title">
+                <h1>Details</h1>
+            </div>
+            <form class="patient-details">
+                <div class="input-field">
+                    <i class="fa-solid fa-user"></i>
+                    <input type="text" placeholder="Username">
+                </div>
+                <div class="input-field">
+                    <i class="fa-solid fa-phone"></i>
+                    <input type="text" placeholder="Phone number">
+                </div>
+                <div class="input-field">
+                    <i class="fa-solid fa-house"></i>
+                    <input type="text" placeholder="Patient room number">
+                </div>
+                <button class="btn">Pay now</button>
+            </form>
+        </div>
+    </div>
+</section>
+<button id="rzp-button1">Pay</button>
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<script>
+    var options = {
+        "key": "YOUR_KEY_ID", // Enter the Key ID generated from the Dashboard
+        "amount": "500", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+        "currency": "INR",
+        "name": "KGH Bytes", //your business name
+        "description": "Test Transaction",
+        "image": "https://example.com/your_logo",
+        "order_id": "order_9A33XWu170gUtm", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+        "callback_url": "https://eneqd3r9zrjok.x.pipedream.net/",
+        "prefill": { //We recommend using the prefill parameter to auto-fill customer's contact information especially their phone number
+            "name": "Gaurav Kumar", //your customer's name
+            "email": "gaurav.kumar@example.com",
+            "contact": "9000090000" //Provide the customer's phone number for better conversion rates 
+        },
+        "notes": {
+            "address": "Razorpay Corporate Office"
+        },
+        "theme": {
+            "color": "#3399cc"
+        }
+    };
+    var rzp1 = new Razorpay(options);
+    document.getElementById('rzp-button1').onclick = function (e) {
+        rzp1.open();
+        e.preventDefault();
+    }
+</script>
 
 <body>
 
