--- a/myproject/templates/checkout.html
+++ b/myproject/templates/checkout.html
@@ -63,7 +63,7 @@
             <div class="title">
                 <h1>Details</h1>
             </div>
-            <form class="patient-details">
+            <form class="patient-details" action ="confirmation" method="POST">
                 <div class="input-field">
                     <i class="fa-solid fa-user"></i>
                     <input type="text" placeholder="Username">
@@ -76,42 +76,40 @@
                     <i class="fa-solid fa-house"></i>
                     <input type="text" placeholder="Patient room number">
                 </div>
-                <button class="btn">Pay now</button>
+                <button class="continue" id="rzp-button1">Pay with Razorpay</button>
+                <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+                <script>
+                    var options = {
+                        "key": "rzp_test_yYvICHDSsLshMz", // Enter the Key ID generated from the Dashboard
+                        "amount": "50000", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+                        "currency": "INR",
+                        "name": "KGH Bytes", //your business name
+                        "description": "Test Transaction",
+                        "image": "https://example.com/your_logo",
+                        "order_id": "order_9A33XWu170gUtm", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+                        "callback_url": "https://eneqd3r9zrjok.x.pipedream.net/",
+                        "prefill": { //We recommend using the prefill parameter to auto-fill customer's contact information especially their phone number
+                            "name": "Gaurav Kumar", //your customer's name
+                            "email": "gaurav.kumar@example.com",
+                            "contact": "9000090000" //Provide the customer's phone number for better conversion rates 
+                        },
+                        "notes": {
+                            "address": "Razorpay Corporate Office"
+                        },
+                        "theme": {
+                            "color": "#3399cc"
+                        }
+                    };
+                    var rzp1 = new Razorpay(options);
+                    document.getElementById('rzp-button1').onclick = function (e) {
+                        rzp1.open();
+                        e.preventDefault();
+                    }
+                </script>
             </form>
         </div>
     </div>
 </section>
-<button id="rzp-button1">Pay</button>
-<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-<script>
-    var options = {
-        "key": "YOUR_KEY_ID", // Enter the Key ID generated from the Dashboard
-        "amount": "500", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
-        "currency": "INR",
-        "name": "KGH Bytes", //your business name
-        "description": "Test Transaction",
-        "image": "https://example.com/your_logo",
-        "order_id": "order_9A33XWu170gUtm", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
-        "callback_url": "https://eneqd3r9zrjok.x.pipedream.net/",
-        "prefill": { //We recommend using the prefill parameter to auto-fill customer's contact information especially their phone number
-            "name": "Gaurav Kumar", //your customer's name
-            "email": "gaurav.kumar@example.com",
-            "contact": "9000090000" //Provide the customer's phone number for better conversion rates 
-        },
-        "notes": {
-            "address": "Razorpay Corporate Office"
-        },
-        "theme": {
-            "color": "#3399cc"
-        }
-    };
-    var rzp1 = new Razorpay(options);
-    document.getElementById('rzp-button1').onclick = function (e) {
-        rzp1.open();
-        e.preventDefault();
-    }
-</script>
-
 <body>
 
 </body>
