username changed to phonenumber

--- a/myproject/templates/checkout.html
+++ b/myproject/templates/checkout.html
@@ -76,16 +76,11 @@
                     <i class="fa-solid fa-house"></i>
                     <input type="text" placeholder="Patient room number">
                 </div>
-                <button class="btn">Pay now</button>
-            </form>
-        </div>
-    </div>
-</section>
-<button id="rzp-button1">Pay</button>
+                <button id="rzp-button1">Pay</button>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
     var options = {
-        "key": "YOUR_KEY_ID", // Enter the Key ID generated from the Dashboard
+        "key": "rzp_test_yYvICHDSsLshMz", // Enter the Key ID generated from the Dashboard
         "amount": "500", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
         "currency": "INR",
         "name": "KGH Bytes", //your business name
@@ -111,6 +106,11 @@
         e.preventDefault();
     }
 </script>
+
+            </form>
+        </div>
+    </div>
+</section>
 
 <body>
 
