--- a/myproject/templates/signup.html
+++ b/myproject/templates/signup.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="input-box">
-                    <i class="fa-solid fa-envelope"></i>
+                    <i class="fa-solid fa-phone"></i>
                     {{ form.phone_number }}
                 </div>
 
