--- a/myproject/templates/login.html
+++ b/myproject/templates/login.html
@@ -32,7 +32,7 @@
                     <h1>Log In</h1>
                 </div>
                 <div class="input-box">
-                    <i class="fa-solid fa-user"></i>
+                    <i class="fa-solid fa-phone"></i>
                     <input type="number" name="email" placeholder="Phone Number" pattern="[0-9]*" title="Please enter only digits">
                 </div>
                 <div class="input-box">
