--- a/myproject/templates/checkout.html
+++ b/myproject/templates/checkout.html
@@ -63,7 +63,7 @@
             <div class="title">
                 <h1>Details</h1>
             </div>
-            <form class="patient-details" action ="confirmation" method="POST">
+            <form class="patient-details" action ="/success" method="POST">
                 <div class="input-field">
                     <i class="fa-solid fa-user"></i>
                     <input type="text" placeholder="Username">
