login working fine

--- a/myproject/templates/maincanteen.html
+++ b/myproject/templates/maincanteen.html
@@ -27,7 +27,7 @@
                 <i class="fa-solid fa-cart-shopping"></i>
                 <p class="cart-value">0</p>
             </div>
-            <a href="index.html">
+            <a href="{% url 'index' %}">
                 <div class="back">Back</div>
             </a>
         </div>
