--- a/myproject/templates/login.html
+++ b/myproject/templates/login.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="input-box">
                     <i class="fa-solid fa-phone"></i>
-                    <input type="number" name="email" placeholder="Phone Number" pattern="[0-9]*" title="Please enter only digits">
+                    <input type="number" name="phone_number" placeholder="Phone Number" pattern="[0-9]*" title="Please enter only digits">
                 </div>
                 <div class="input-box">
                     <i class="fa-solid fa-lock"></i>
