--- a/myproject/templates/misccanteen.html
+++ b/myproject/templates/misccanteen.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Misc canteen</title>
-    <link rel="icon" href="{% static'image/kglogo.jpg' %}">
+    <link rel="icon" href="{% static 'image/kglogo.jpg' %}">
     <link rel="stylesheet" href="{% static 'misc-canteenstyle.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -71,7 +72,7 @@
             </div>
 
 
-            <a href="{% url 'checkout.html' %}">
+            <a href="{% url 'checkout' %}">
                 <button class="buy-btn">Place now</button>
             </a>
         </div>
