--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -166,10 +166,14 @@
         </div>
     </section>
     <!-- contact page end-->
+    <a href="{% url 'addmin_login' %}" class="admin-login-btn">
+        Admin Login
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
+   
+    </a>
 </body>
 
 </html>
