--- a/myproject/staticfiles/style.css
+++ b/myproject/staticfiles/style.css
@@ -199,3 +199,19 @@ a{
     display:flex;
     flex-wrap:wrap;
 }
+
+.admin-login-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.admin-login-btn:hover {
+    background-color: #0056b3;
+}
