--- a/myproject/templates/addmin.html
+++ b/myproject/templates/addmin.html
@@ -21,8 +21,8 @@
                 <a href="{% url 'inventory' %}">
                     <li>Inventory</li>
                 </a>
-                <a href="{% url 'login' %}">
-                    <li>Login</li>
+                <a href="{% url 'home' %}">
+                    <li>Home</li>
                 </a>
             </ul>
         </div>
