--- a/myproject/static/inventorystyle.css
+++ b/myproject/static/inventorystyle.css
@@ -48,6 +48,7 @@ section{
     background-color:#3633AD;
     color:white;
     display:flex;
+    flex-direction:column;
     padding:10px;
     align-items:center;
     justify-content: space-between;
@@ -56,6 +57,7 @@ section{
     font-size:2em;
     font-weight:400;
 }
+
 .final-btn{
     margin-top:20px;
     height:50px;
@@ -68,7 +70,11 @@ section{
     color:white;
     background-color: #D7402C;
     border-radius:20px;
-    padding:5px 10px;
+    padding:5px 20px;
+}
+.remove{
+    margin-bottom:20px;
+    color:red;  
 }
 #input-num{
     width:45px;
