--- a/myproject/templates/misccanteen.html
+++ b/myproject/templates/misccanteen.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% load static %}
+{%load static%}
 
 <head>
     <meta charset="UTF-8">
@@ -72,7 +72,7 @@
             </div>
 
 
-            <a href="{% url 'checkout' %}">
+            <a href="{% static 'checkout' }">
                 <button class="buy-btn">Place now</button>
             </a>
         </div>
