--- a/myproject/static/checkoutstyle.css
+++ b/myproject/static/checkoutstyle.css
@@ -53,7 +53,7 @@ section{
 
 }
 h1{
-    font-size:2rem;
+    font-size:1rem;
 }
 .detail-value{
     width:100%;
@@ -70,6 +70,7 @@ h1{
     width:150px;
 }
 .total{
+    display: inline-block;
     position:absolute;
     bottom:20px;
     right:20px;
@@ -98,7 +99,7 @@ input{
     border:none;
     outline:none;
 }
-.btn{
+.continue{
     width:100px;
     height:45px;
     border:none;
