checkout seprated for  main and misc

--- a/myproject/templates/misccanteen.html
+++ b/myproject/templates/misccanteen.html
@@ -72,7 +72,7 @@
             </div>
 
 
-            <a href="{% static 'checkout' }">
+            <a href="{% static 'misccheckout' }">
                 <button class="buy-btn">Place now</button>
             </a>
         </div>
