--- a/myproject/templates/misccheckout.html
+++ b/myproject/templates/misccheckout.html
@@ -17,6 +17,12 @@
     <div class="img-container">
         <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
     </div>
+    <div class="btns">
+        </div>
+        <a href="{% url 'misccanteen' %}">
+            <div class="back">Back</div>
+        </a>
+    </div>
 </header>
 <section>
     <div class="container">
