--- a/myproject/static/checkoutstyle.css
+++ b/myproject/static/checkoutstyle.css
@@ -107,3 +107,11 @@ input{
     color:white;
     border-radius:20px;
 }
+
+
+.btns{
+    display:flex;
+    width:20%; 
+    justify-content:space-around;
+    cursor:pointer;
+}
