--- a/myproject/templates/misccanteen.html
+++ b/myproject/templates/misccanteen.html
@@ -72,7 +72,7 @@
             </div>
 
 
-            <a href="{% url 'checkout' %}">
+            <a href="{% url 'misc_checkout' %}">
                 <button class="buy-btn">Place now</button>
             </a>
         </div>
