--- a/myproject/templates/maincanteen.html
+++ b/myproject/templates/maincanteen.html
@@ -71,7 +71,7 @@
             </div>
 
 
-            <a href="{% url 'main_checkout' %}">
+            <a href="{% url 'maincheckout' %}">
                 <button class="buy-btn">Place now</button>
             </a>
         </div>
