--- a/myproject/templates/maincheckout.html
+++ b/myproject/templates/maincheckout.html
@@ -77,37 +77,10 @@
                     <i class="fa-solid fa-house"></i>
                     <input type="text" placeholder="Patient room number">
                 </div>
-                <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-                <form action="{% url 'conformation' %}" method="POST">
-                    <input type="hidden" name="order_id" value="{{ order_id }}">
-                    <script>
-                        var options = {
-                            "key": "{{ settings.RAZORPAY_API_KEY }}",
-                            "amount": "{{ amount }}",
-                            "currency": "INR",
-                            "name": "Your Company Name",
-                            "description": "Payment Description",
-                            "order_id": "{{ order_id }}",
-                            "handler": function (response) {
-                                // Handle the payment success response
-                                // You can submit the form or redirect to a success page
-                                document.forms[0].submit();
-                            },
-                            "prefill": {
-                                "name": "John Doe",
-                                "email": "john@example.com",
-                                "contact": "9876543210"
-                            }
-                        };
-                        var rzp = new Razorpay(options);
-                        rzp.open();
-                    </script>
-                </form>
-            </form>
         </div>
     </div>
+    <script src="{% static 'checkout.js' %}"></script>
 </section>
-
 
 <body>
 
