--- a/myproject/templates/additems.html
+++ b/myproject/templates/additems.html
@@ -13,9 +13,11 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
-        </div>
+        <a href="{% url 'index' %}">
+            <div class="logo">
+                <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
+            </div>
+        </a>
         <div class="back">
             <a href="{% url 'inventory' %}">Back</a>
         </div>
