--- a/myproject/templates/inventory.html
+++ b/myproject/templates/inventory.html
@@ -15,9 +15,11 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
-        </div>
+        <a href = "{% url 'addmin' %}">
+            <div class="logo">
+                <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
+            </div>
+        </a>
         <div class="back">
             <a href="{% url 'addmin' %}">Back</a>
         </div>
