--- a/myproject/templates/login.html
+++ b/myproject/templates/login.html
@@ -16,9 +16,11 @@
 
 <body>
     <header>
-        <div class="logo-container">
-            <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
-        </div>
+        <a href="{% url 'index' %}">
+            <div class="logo-container">
+                <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
+            </div>
+        </a>
         <a href="{% url 'index' %}">
             <div class="back">Back</div>
         </a>
