--- a/myproject/templates/misccanteen.html
+++ b/myproject/templates/misccanteen.html
@@ -16,9 +16,11 @@
 <body>
     <!-- navigation bar -->
     <header class="fade-up">
-        <div class="logo">
-            <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
-        </div>
+        <a href="{% url 'index' %}">
+            <div class="logo">
+                <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
+            </div>
+        </a>
         <div class="search-box">
             <input type="text" placeholder="Search">
             <div class="search-font"><i class="fa-solid fa-magnifying-glass"></i></div>
