--- a/myproject/templates/misccheckout.html
+++ b/myproject/templates/misccheckout.html
@@ -14,9 +14,11 @@
 </head>
 
 <header>
-    <div class="img-container">
-        <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
-    </div>
+    <a href="{% url 'index' %}">
+        <div class="img-container">
+            <img src="{% static 'image/team-project_image-removebg-preview.png' %}" alt="logo">
+        </div>
+    </a>
     <div class="btns">
         </div>
 
