fixed succes local

--- a/myproject/templates/conformation.html
+++ b/myproject/templates/conformation.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conformation | KHG-Bites</title>
-    <link rel="icon" href="{% start 'image/kglogo.jpg' %}">
-    <link rel="stylesheet" href="{% static'conformationstyle.css' %}">
+    <link rel="icon" href="{% static 'image\kglogo.jpg' %}">
+    <link rel="stylesheet" href="{% static 'conformationstyle.css' %}">
 </head>
 <body>
     <div class="box">
-        <img src="image/verification.jpg" alt="verification">
+        <img src="{% static 'image\verification.jpg' %}" alt="verification">
     </div>
     <div class="content">
-        <p>Hey username..!,Your order is placed successfully and delivered to your room within 10 mintues</p>
+        <p>Your order is placed successfully and delivered to you shortly..</p>
         
     </div>
 </body>
