--- a/myproject/staticfiles/checkoutstyle.css
+++ b/myproject/staticfiles/checkoutstyle.css
@@ -61,14 +61,13 @@ h1{
     display:grid;
     grid-template-columns: 60% 40%;
     gap: 20px;
+    margin-left:50px;
+    margin-top:20px;
+}
 
-}
-.detail-value p{
-    margin-top:8px;
-}
 .detail-value span{
     display:flex;
-    width:150px;
+    width:200px;
 }
 .total{
     display: inline-block;
